PROJECT ( "MPU9255_Complete" )
SET ( PROJECT_VERSION_MAJOR 0 )
SET ( PROJECT_VERSION_MINOR 1 )

SET ( CMAKE_BUILD_TYPE Debug )
SET ( CMAKE_VERBOSE_MAKEFILE true )

SET ( OUTPUT_ELF "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out" )

SET ( SRC_FILES MPU9255_Main.cpp MPU9255.h MPU9255.cpp )

SET ( CMAKE_C_COMPILER "gcc-7.2.0" )

ADD_COMPILE_OPTIONS ( -std=c++11 )

LINK_LIBRARIES ( wiringPi )

SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE} )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )

ADD_EXECUTABLE ( ${OUTPUT_ELF} ${SRC_FILES} )




